2015-01-16 Matt
	* Adding ChangeLog and dir structure